Ajout du header

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-auditor {
+    background-color: linear-gradient(125deg, #FF67FF 10%, #FFE27C 85%);
+}
