--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,7 @@
 /* Auditor */
 @import 'Auditor/base.css';
 @import 'Auditor/header.css';
+@import 'Auditor/home.css';
 /* Animator */
 @import 'Animator/base.css';
 
@@ -22,4 +23,17 @@
 
 .text-blue-audior {
     color: #1C1354;
+}
+
+/* Provisoire car pour l'instant home.css ne marche pas */
+body.chat-open {
+    overflow: hidden;
+}
+#the-header.chat-open, #player_container.chat-open {
+    position: fixed;
+    left: 0;
+    right: 0;
+}
+#the-header.chat-open {
+    top: 0;
 }
