--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
 /*@import 'normalize.css'; Tailwind a déjà le sien */
 @import 'Configuration/variables.css';
 @import 'Configuration/typography.css';
@@ -12,14 +7,18 @@
 /* Animator */
 @import 'Animator/base.css';
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .gradient-auditor {
     background-image: linear-gradient(125deg, #FF67FF 10%, #FFE27C 85%);
 }
 
-.bg-blue-audior {
+.bg-blue-auditor {
     background-color: #1C1354;
 }
 
-.text-blue-audior {
+.text-blue-auditor {
     color: #1C1354;
 }
