--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,25 +1,5 @@
-/*@import 'normalize.css'; Tailwind a déjà le sien */
-@import 'Configuration/variables.css';
-@import 'Configuration/typography.css';
-/* Auditor */
-@import 'Auditor/base.css';
-@import 'Auditor/header.css';
-@import 'Auditor/home.css';
-/* Animator */
-@import 'Animator/base.css';
+@import "Auditor/style.css";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.gradient-auditor {
-    background-image: linear-gradient(125deg, #FF67FF 10%, #FFE27C 85%);
-}
-
-.bg-blue-auditor {
-    background-color: #1C1354;
-}
-
-.text-blue-auditor {
-    color: #1C1354;
-}
