--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-auditor {
+    background-image: linear-gradient(125deg, #ff67ff 10%, #ffe27c 85%);
+}
+
+.bg-blue-auditor {
+    background-color: #1c1354;
+}
+
+.text-blue-auditor {
+    color: #1c1354;
+}
+
+body.chat-open {
+    overflow: hidden;
+}
