adaptation du header

--- a/resources/css/Auditor/style.css
+++ b/resources/css/Auditor/style.css
@@ -1,10 +1,7 @@
-#the-header.chat-open,
-#player_container.chat-open {
+#the-header.chat-open {
     position: fixed;
     left: 0;
     right: 0;
-}
-
-#the-header.chat-open {
     top: 0;
+    z-index: 1;
 }
